<resources>
    <string name="app_name">MultiAppsDemo</string>
    <string name="entrez_votre_nom">Entrez votre nom :</string>
    <string name="votre_nom">Votre nom</string>
    <string name="choisissez_une_application">Choisissez une application :</string>
    <string name="claculatrice">MyCalculatrice</string>
    <string name="btn7">7</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="ac">AC</string>
    <string name="division">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">X</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="soustraction">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="addition">+</string>
    <string name="del">DEL</string>
    <string name="_0">0</string>
    <string name="virgule">.</string>
    <string name="egal">=</string>
    <string name="_zero">0</string>
    <string name="bienvenue_dans_topquiz_quel_est_votre_pr_nom">bievennue</string>
    <string name="veuillez_saisir_votre_pr_nom">saisir_Nom</string>
    <string name="ma_question">ma_question</string>
    <string name="reponse_1" />
    <string name="reponse_4" />
    <string name="reponse_3" />
    <string name="reponse_2" />
    <string name="jouer">jouer\n</string>
    <string name="bienvenue_dans_multiappsdemo">Bienvenue dans MultiAppsDemo !</string>
    <string name="votre_noms">Votre nom</string>
</resources>